# Tibyan

./: .gitignore  CMakeLists.txt  README.md
docs/: PRD.md  README.md  TDD.md
docs/reports/: TIB-02-CMake-Initialization-Report.md  TIB-03-Qt6-Integration-Report.md
src/ui/: MainWindow.cpp  MainWindow.h  main.cpp
tests/unit/: ui_tests.cpp
